Reordered text, added classes and a link to a project, fixed project containers so that they correctly wrap up the showcases of each project from now on and added order to CSS rules, among other things

--- a/Proyectos/styles.css
+++ b/Proyectos/styles.css
@@ -8,48 +8,43 @@
 
 body
 {
-    background-color: rgb(149, 173, 194);
-    display:flex;
-    flex-direction: column;    
-    font-family: 'Arvo', serif;
-    min-height: 100vh;
-}
-
-h1
-{
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 0.75% 0;
+  display:flex;
+  flex-direction: column;    
+  font-family: 'Arvo', serif;
+  min-height: 100vh;
+  background-color: rgb(149, 173, 194);
 }
 
 main
 {
-    flex: 1;
-    flex-shrink: 0;
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  flex-shrink: 0;
 }
 
-main p
+h1
 {
-    padding: 0 2% 10px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 0.75% 0;
+}
+
+.intro
+{
+  padding: 0 2%;
 }
 
 .main-project-container
 {
-    display: flex;
-    margin-top: 1%;
-    justify-content: center;
-    flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
+  margin-top: 1%; 
 }
 
-.platzi, .personal
+.project-column
 {
-  display: flex;
-  text-align: center;
-  flex-flow: row wrap;
-  align-content: flex-start;
-  flex-grow: 1;
   padding: 0.5% 1% 0;
   width:50%;
   border-top: black solid;
@@ -57,11 +52,25 @@ main p
   background-color: rgb(93, 128, 158);
 }
 
+.project-column:first-of-type
+{
+  border-right: black solid;
+}
+
 .container--description
 {
-  flex-grow: 0;
   display: block;
-  order: -1;
+  margin-left: 13.05px;
+  margin-bottom: 10px;
+}
+
+.project-showcase
+{
+  display: flex;
+  flex-flow: row wrap;
+  align-content: flex-start;
+  height: calc(100% - 30px);
+  text-align: center;
 }
 
 .project
@@ -69,40 +78,53 @@ main p
   display: inline;
   flex-grow: 1;
   width: 25%;
-  height: 20vh;
-  margin: 0;
+  height: 172.5px;
+  margin: 0 0 20px 0;
+}
+
+.project>a
+{
+  display: inline-block;
+  width: 90%;
+  height: 90px;
+  margin: 0 auto;
+}
+
+.preview
+{
+  width: 100%;
+  height:90px;
 }
 
 .project--title
 {
-  padding-bottom: 5px;
   color: #0645AD;
   font-weight: bold;
   text-decoration: underline;
 }
 
-.preview
-{
-    flex-shrink: 1;
-    width: 90%;
-    height:100%;
-}
-
-.platzi
-{
-    border-right: black solid;
-}
-
 .project--summary
 {
-    font-size: 0.8rem;
-    text-decoration-line: none;
-    text-decoration-color: black;
+  margin: 0 6.51667px;
+  font-size: 0.8rem;
+  text-decoration-line: none;
+  text-align: center;
+}
+
+section:nth-child(2)>p
+{
+  padding-left: 0;
 }
 
 footer
 {
-  background-color: rgb(74,81,97);
-  text-align: center;
   padding-top: 1%;
+  height: 93.65px;
+  text-align: center;
+  background-color: rgb(74,81,97);
+}
+
+footer p
+{
+  padding-bottom: 10px;
 }
